# OpenTRS-Core

./: README.md  floats.txt  ints.txt  pyproject.toml
docs/: csq_format.md
exports/sample_csv/: frame_0000.csv  frame_0001.csv  frame_0002.csv  frame_0003.csv  frame_0005.csv  frame_0006.csv  frame_0007.csv  frame_0008.csv  frame_0009.csv  frame_0010.csv  frame_0011.csv  frame_0012.csv  frame_0013.csv  frame_0014.csv  frame_0015.csv  frame_0016.csv  frame_0017.csv  frame_0018.csv  frame_0019.csv  frame_0020.csv  frame_0021.csv  frame_0022.csv  frame_0023.csv  frame_0024.csv  frame_0025.csv  frame_0026.csv  frame_0027.csv  frame_0028.csv  frame_0029.csv  frame_0030.csv  frame_0031.csv  frame_0032.csv  frame_0033.csv  frame_0034.csv  frame_0035.csv  frame_0036.csv  frame_0037.csv  frame_0038.csv  frame_0039.csv  frame_0040.csv  (+120 more)
opentrs/: .gitignore  __main__.py
tests/: test_block_analyzer.py  test_decode_pipeline.py  test_decoder.py  test_fff_parser.py  test_frame.py  test_integration.py  test_jpeg_ls_decoder.py  test_metadata.py  test_metadata_integration.py  test_pipeline.py  test_planck.py  test_radiometric_converter.py  test_raw_frame.py
tools/:  dump_unknown_floats.py   search_float.py  check_alignment.py  compare_raw_temperature.py  dump_block.py  dump_block_headers.py  dump_floats.py  dump_hex.py  dump_ints.py  dump_metadata.py  dump_record.py  dump_record_candidates.py  dump_record_table.py  dump_record_values.py  export_csv.py  export_png.py  find_planck_constants.py  inspect_block.py  optimize_planck.py  raw_statistics.py  validate_planck.py
(+22 files in other folders)
